--- a/FalaFilhaIONIC/src/app/home/home.page.html
+++ b/FalaFilhaIONIC/src/app/home/home.page.html
@@ -8,7 +8,27 @@
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+
+    <ion-button color="primary" expand="full">Primary</ion-button>
+    <ion-button color="secondary" shape="round">Secondary</ion-button>
+    <ion-button color="tertiary" expand="full" fill="outline">Tertiary</ion-button>
+    <ion-button color="success" expand="block" fill="outline">Success</ion-button>
+    <ion-button color="warning" shape="round" fill="outline">Warning</ion-button>
+    <ion-button color="danger">Danger</ion-button>
+    <ion-button color="light">Light</ion-button>
+    <ion-button color="medium">Medium</ion-button>
+    <ion-button color="dark">Dark</ion-button>
+
+    <ion-button>
+      <ion-icon slot="start" name="star"></ion-icon>
+      Left Icon
+    </ion-button>
+
+    <ion-button>
+      <ion-icon slot="icon-only" name="star">TETE</ion-icon>
+    </ion-button>
+
+
+
   </div>
 </ion-content>
